# dataplex-labs

./: .gitignore  CONTRIBUTING.md  README.md
chat_with_data_agent/: README.md  SKILL.md  __init__.py  agent.py  deploy.py  requirements.txt  utils.py
chat_with_data_agent/knowledge_catalog_discovery_agent/: README.md  SKILL.md  __init__.py  agent.py  tools.py  utils.py
data-mesh-banking-labs/: README.md
data-mesh-banking-labs/lab1-data-organization/: README.md
data-mesh-banking-labs/lab2-data-security/: README.md  apply-security-policies.sh
data-mesh-banking-labs/lab3-data-curation/: README.md
data-mesh-banking-labs/lab4-build-data-products/: README.md
data-mesh-banking-labs/lab5-data-classification/: README.md
data-mesh-banking-labs/lab6-data-quality/: README.md
data-mesh-banking-labs/lab7-register-data-products/: README.md
data-mesh-banking-labs/lab8-data-discovery-lineage/: README.md
data-mesh-banking-labs/lab9-data-profiling/: README.md
data-mesh-banking-labs/setup/: deploy-helper.sh  destroy_helper.sh
dataplex-explore-labs/: README.md
dataplex-quickstart-labs/: README.md
dataplex-quickstart-labs/02-lab-guide/: module-01-lab-environment-overview.md  module-02-terraform-provisioning.md  module-03-organize-your-data-lake.md  module-04-register-assets-into-zones.md  module-05-create-exploration-environment.md  module-06-discovery.md  module-07-2-explore-with-jupyter-notebooks.md  module-08-1-catalog-basics.md  module-08-2-create-custom-entry-in-catalog.md  module-08-3-create-tag-template-for-catalog-entry.md  module-08-4-create-overview-for-catalog-entry.md  module-08-5-search-catalog.md  module-08-6-business-glossary.md  module-08-7-create-fileset-entry-in-catalog.md  module-09-1-data-lineage-with-bigquery.md  module-09-2-data-lineage-with-cloud-composer-bq.md  module-09-3-data-lineage-with-cloud-composer-spark.md  module-09-4-custom-lineage.md  module-09-5-manage-lineage.md  module-09-6-data-lineage-with-dataproc.md  module-09-7-udf-custom-lineage.md  module-10-1-data-profiling.md  module-11-1a-auto-dq-completeness.md  module-11-1b-auto-dq-validity.md  module-11-1c-auto-dq-value-set.md  module-11-1d-auto-dq-duplicates.md  module-11-1e-auto-dq-sql-row.md  module-11-1f-auto-dq-sql-aggregates.md  module-11-1g-auto-dq-freshness-check.md  module-11-1h-auto-dq-challenge-lab.md  module-12-1a-dq-task-rule-authoring-1.md  module-12-1b-dq-task-rule-authoring-2.md  module-12-1c-dq-incident-mgmt.md  module-12-1d-dq-task-dq-dashboard.md  (+4 more)
governance-agent/: README.md  glossary_terms.json  knowledge_insights.json  pyproject.toml
governance-agent/metadata_propagation/: steward_cli.py
governance-agent/metadata_propagation/agent/plugins/: context.py  doc_description_plugin.py  document_rag_engine.py  dq_plugin.py  lineage_plugin.py  similarity_engine.py
governance-agent/metadata_propagation/data_generation/: attach_test_policy_tags.py  generate_data.py  requirements.txt  run_dq_scans.py
governance-agent/metadata_propagation/dataplex_integration/: dq_propagation.py  export_metadata.py  glossary_management.py  lineage_propagation.py  manage_scans.py  propagate_metadata.py
governance-agent/metadata_propagation/ui/: gradio_app.py
governance-agent/tests/: test_dashboard_expansion.py  test_fallback_propagation.py  test_glossary_logic.py  test_glossary_propagation_lineage.py  test_native_glossary_links.py  test_noise_reduction.py  test_precision_matching.py  test_recursive_lineage.py  test_sql_enrichment.py  test_sql_logic.py
governance-metadata-propagation/: .env.example  README.md  pyproject.toml
knowledge_catalog_discovery_agent/: README.md  SKILL.md  agent.py  requirements.txt  tools.py  utils.py
knowledge_catalog_enrichment_agent/: .gitignore  README.md
lineage-uses-cases-documentation/: README.md  workflow_settings.yaml
policy-as-code-agent/: .env.example  MANIFEST.in  README.md  pyproject.toml
policy-as-code-agent/docs/: HIGH_LEVEL_DETAILS.md  LOW_LEVEL_DETAILS.md  MEMORY_IMPLEMENTATION.md  MEMORY_INTEGRATION.md
policy-as-code-agent/policy_as_code_agent/: __init__.py  agent.py  config.py  mcp.py  memory.py  simulation.py
policy-as-code-agent/policy_as_code_agent/prompts/: code_generation.md  instructions.md  remediation.md
policy-as-code-agent/policy_as_code_agent/utils/: dataplex.py  gcs.py  json_tools.py  llm.py
policy-as-code-agent/tests/: conftest.py
policy-as-code-agent/tests/integration/: test_agent.py  test_conversational_flow.py  test_scorecard_flow.py
policy-as-code-agent/tests/unit/: test_dataplex.py  test_llm.py  test_memory.py  test_security.py
(+364 files in other folders)
