[project]
name = "governance-agent"
version = "0.0.1"
description = "Agentic Data Governance with Knowledge Catalog: automatic metadata propagation using Column Level Lineage."
authors = [
    { name = "Akanksha Bhagwanani", email = "akankshapb@google.com" },
    { name = "Vanshaj Bhatia", email = "vanshajbhatia@google.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "gradio[oauth]>=4.0.0",
    "requests>=2.31.0",
    "google-cloud-dataplex>=2.14.0",
    "google-adk[eval]>=1.28.1",
    "google-cloud-bigquery>=3.18.0",
    "google-cloud-storage>=2.15.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "authlib>=1.3.0",
    "starlette>=0.36.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "google-cloud-datacatalog-lineage>=0.1.0",
    "google-cloud-datacatalog>=3.18.0",
    "google-cloud-aiplatform>=1.43.0",
    "google-genai>=0.1.0",
    "google-cloud-bigquery-datapolicies>=0.1.0",
    "google-cloud-recommender>=2.14.0",
    "pyOpenSSL>=24.0.0",
    "reportlab>=4.1.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehension
    "PL", # Pylint rules
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "RUF" # ruff specific rules
]
ignore = [
    "E501", # Ignore line length for long LLM prompts
    "PLR0913", # Allow agents to have many arguments if needed
    "C901", "PLR0911", "PLR0912", "PLR0915"
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["metadata_propagation"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark a test as asyncio.",
    "integration: mark a test as requiring GCP credentials.",
]

[tool.hatch.build.targets.wheel]
packages = ["metadata_propagation"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
override-dependencies = [
    "litellm>=1.84.0",
]
