[project]
name = "policy-as-code"
version = "0.0.1"
description = "The Policy-as-Code Agent is a generative AI-powered tool that automates data governance."
authors = [{ name = "Vanshaj Bhatia", email = "vanshajbhatia@google.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "PyYAML==6.0.3",
    "google-adk[eval]==1.21.0",
    "google-cloud-storage==2.19.0",
    "vertexai==1.43.0",
    "google-cloud-dataplex==2.14.0",
    "google-cloud-aiplatform==1.130.0",
    "google-api-python-client==2.186.0",
    "google-cloud-firestore==2.21.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-xdist==3.8.0",
    "pytest-asyncio==1.3.0",
    "python-dotenv>=1.0.0",
    "agent-starter-pack>=0.32.0",
]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehension
    "PL", # Pylint rules
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "RUF" # ruff specific rules
]
ignore = [
    "E501", # Ignore line length for long LLM prompts
    "PLR0913", # Allow agents to have many arguments if needed
    "C901", "PLR0911", "PLR0912", "PLR0915"
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["policy_as_code_agent"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark a test as asyncio.",
    "integration: mark a test as requiring GCP credentials.",
]

[tool.agent-starter-pack]
example_question = "All tables must have a DATA_OWNER label."

[tool.agent-starter-pack.settings]
agent_directory = "policy_as_code_agent"
deployment_targets = ["agent_engine", "cloud_run"]

[tool.hatch.build.targets.wheel]
packages = ["policy_as_code_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"